--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
         <div id="ratingStarBtns" role="radiogroup" aria-label="Star rating">
           
-          <button id="oneStar" class="stars" role="radio" tabindex="0" aria-checked="false">1</button>
+          <button id="oneStar" class="stars" role="radio" tabindex="-1" aria-checked="false">1</button>
           <button id="twoStars" class="stars" role="radio" tabindex="-1" aria-checked="false">2</button>
-          <button id="threeStars" class="stars" role="radio" tabindex="-1" aria-checked="true">3</button>
+          <button id="threeStars" class="stars selected" role="radio" tabindex="0" aria-checked="true">3</button>
           <button id="fourStars" class="stars" role="radio" tabindex="-1" aria-checked="false">4</button>
           <button id="fiveStars" class="stars" role="radio" tabindex="-1" aria-checked="false">5</button>
 
