correction after solution report

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
         <div id="ratingStarBtns" role="radiogroup" aria-label="Star rating">
           
-          <button id="oneStar" class="stars" role="radio" tabindex="0" aria-checked="false">1</button>
-          <button id="twoStars" class="stars" role="radio" tabindex="-1" aria-checked="false">2</button>
-          <button id="threeStars" class="stars selected" role="radio" tabindex="-1" aria-checked="true">3</button>
-          <button id="fourStars" class="stars" role="radio" tabindex="-1" aria-checked="false">4</button>
-          <button id="fiveStars" class="stars" role="radio" tabindex="-1" aria-checked="false">5</button>
+          <button id="oneStar" class="stars" aria-label="one star button">1</button>
+          <button id="twoStars" class="stars" aria-label="two stars button">2</button>
+          <button id="threeStars" class="stars selected" aria-label="three stars button (selected by default)">3</button>
+          <button id="fourStars" class="stars" aria-label="four stars button">4</button>
+          <button id="fiveStars" class="stars" aria-label="five stars button">5</button>
 
         </div>
       </div>
