--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
 
-        <div id="ratingStarBtns" role="radiogroup" aria-label="Star rating">
+        <div id="ratingStarBtns" aria-label="Star rating container">
           
           <button id="oneStar" class="stars" aria-label="one star button">1</button>
           <button id="twoStars" class="stars" aria-label="two stars button">2</button>
