--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div>
       </div>
 
-      <button id="submitbtn" aria-label="Submit rated star">Submit</button>
+      <button id="submitbtn" aria-label="Submit your star rating">Submit</button>
       
     </section>
 
-    <section id="feedbackMessageContainer">
+    <section id="feedbackMessageContainer" role="region" aria-live="polite" aria-atomic="true">
       <img src="./images/illustration-thank-you.svg" alt="">
 
       <p>You selected <span id="selectedStars"></span> out of 5</p>
